--- a/404.html
+++ b/404.html
@@ -6,16 +6,57 @@
             margin: 150px auto;
             font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif;
             font-size: 16px;
-            line-height: 24px;
+            line-height: 1.6;
+        }
+
+        @keyframes swing {
+            0% { transform: rotate(0deg); }
+            20% { transform: rotate(-15deg); }
+            40% { transform: rotate(10deg); }
+            60% { transform: rotate(-10deg); }
+            80% { transform: rotate(5deg); }
+            100% { transform: rotate(-5deg); }
+        }
+
+        img {
+            width: 44px;
+            margin-left: -54px;
+            animation-name: swing;
+            -webkit-transform-origin: top center;
+            transform-origin: top center;
+            -webkit-animation-name: swing;
+            -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+            -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+        }
+
+        .red {
+            color: red;
+        }
+
+        a {
+            color: #53ac63;
+            text-decoration: none;
+        }
+        a:hover, a:focus {
+            text-decoration: underline;
+            text-decoration-color: #E7E7E7;
+            text-decoration-thickness: 2px;
         }
     </style>
 </head>
 <body>
-    <h1>Page Not Found</h1>
+    <h1><img src="/en/latest/_static/logo_small.png" /> <span class="red">ERROR</span> Page Not Found</h1>
     <p>We couldn't find this page in the pyinfra documentation. If you thing this is a bug, please consider <a href="https://github.com/Fizzadar/pyinfra/issues/new/choose">submitting an issue on GitHub</a>. Otherwise, here's the links to the correct documentation indexes:</p>
     <ul>
-        <li><a href="/en/1.x"><strong>v1.x</strong></a></li>
-        <li><a href="/en/latest"><strong>latest</strong></a></li>
+        <li><a href="/en/2.x"><strong>v2.x</strong></a> (latest release)</li>
+        <li><a href="/en/latest"><strong>latest</strong></a> (upcoming release)</li>
+    </ul>
+    <p>Here's links to the old versions of this documentation if needed:</p>
+    <ul>
+        <li><a href="/en/1.x">v1.x</a></li>
+        <li><a href="/en/0.x">v0.x</a></li>
     </ul>
 </body>
 </html>
