--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!DOCTYPE html><html><head><title>./en/1.x</title><link rel="canonical" href="./en/1.x"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=./en/1.x" /></head></html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="robots" content="noindex">
+    <title>Redirecting to: /en/2.x/</title>
+    <link rel="canonical" href="/en/2.x/"/>
+    <meta http-equiv="refresh" content="0; url=/en/2.x/" />
+</head>
+</html>
