Manual docs build 2022-05-03

--- a/en/2.x/connectors/ssh.html
+++ b/en/2.x/connectors/ssh.html
@@ -169,6 +169,7 @@ pyinfra @ssh/my-host.net ...
 <span class="n">ssh_config_file</span>  <span class="c1"># Custom SSH config file</span>
 <span class="n">ssh_known_hosts_file</span>  <span class="c1"># Custom SSH known hosts file</span>
 <span class="n">ssh_strict_host_key_checking</span>  <span class="c1"># Override strict host keys check setting</span>
+<span class="n">ssh_paramiko_connect_kwargs</span>  <span class="c1"># Override keyword arguments passed into paramiko&#39;s `SSHClient.connect`</span>
 </pre></div>
 </div>
 </div>
