--- a/en/next/operations/apt.html
+++ b/en/next/operations/apt.html
@@ -397,7 +397,7 @@ default uses <code class="docutils literal notranslate"><span class="pre">/etc/a
 
 <span class="c1"># Upgrade all packages and remove unneeded transitive dependencies</span>
 <span class="n">apt</span><span class="o">.</span><span class="n">upgrade</span><span class="p">(</span>
-    <span class="n">name</span><span class="o">=</span><span class="s2">&quot;Upgrade apt packages and remove unneeded dependencies&quot;</span>
+    <span class="n">name</span><span class="o">=</span><span class="s2">&quot;Upgrade apt packages and remove unneeded dependencies&quot;,</span>
     <span class="n">auto_remove</span><span class="o">=</span><span class="kc">True</span>
 <span class="p">)</span>
 </pre></div>
