Add 3.x to 404 page

--- a/404.html
+++ b/404.html
@@ -50,6 +50,7 @@
     <h1><img src="/en/latest/_static/logo_small.png" /> <span class="red">ERROR</span> Page Not Found</h1>
     <p>We couldn't find this page in the pyinfra documentation. If you thing this is a bug, please consider <a href="https://github.com/Fizzadar/pyinfra/issues/new/choose">submitting an issue on GitHub</a>. Otherwise, here's the links to the correct documentation indexes:</p>
     <ul>
+        <li><a href="/en/3.x"><strong>v3.x</strong></a> (latest release)</li>
         <li><a href="/en/2.x"><strong>v2.x</strong></a> (latest release)</li>
         <li><a href="/en/latest"><strong>latest</strong></a> (upcoming release)</li>
     </ul>
