--- a/en/latest/operations/server.html
+++ b/en/latest/operations/server.html
@@ -245,7 +245,7 @@ Linux/BSD.</p>
 <li><strong>hostname_file</strong>: the file that permanently sets the hostname</li>
 </ul>
 <dl class="docutils">
-<dt>Hostname file:</dt><dd><p>The hostname file only matters no systems that do not have <code class="docutils literal notranslate"><span class="pre">hostnamectl</span></code>,
+<dt>Hostname file:</dt><dd><p>The hostname file only matters on systems that do not have <code class="docutils literal notranslate"><span class="pre">hostnamectl</span></code>,
 which is part of <code class="docutils literal notranslate"><span class="pre">systemd</span></code>.</p>
 <p>By default pyinfra will auto detect this by targeting <code class="docutils literal notranslate"><span class="pre">/etc/hostname</span></code>
 on Linux and <code class="docutils literal notranslate"><span class="pre">/etc/myname</span></code> on OpenBSD.</p>
